[package]
authors = ["Hunter Praska <hunter@wiggin-labs.com>"]
name = "minerva"
version = "0.1.0"
autobenches = false

[dev-dependencies]
criterion = "0.3.3"

[dependencies]
derive_is_enum_variant = "0.1.1"
lazy_static = "1.4.0"
regex = "1.4.2"
rustyline = "6.3.0"
derivative = "2.1.1"

[dependencies.string-interner]
git = "https://git.hunterpraska.com/hunter/incarnation"

[dependencies.vm]
path = "vm"

[[bench]]
name = "fibonacci"
harness = false

[[bench]]
name = "count"
harness = false
