[package]
authors = ["Hunter Praska <hunter@wiggin-labs.com>"]
name = "minerva"
version = "0.1.0"
autobenches = false

[dev-dependencies]
criterion = "0.3.5"

[dependencies]
regex = "1.5.4"
rustyline = "9.0.0"

[dependencies.string-interner]
git = "https://git.hunterpraska.com/hunter/incarnation"

[dependencies.vm]
path = "vm"

[[bench]]
name = "fibonacci"
harness = false

[[bench]]
name = "count"
harness = false

[profile.release]
lto = true
codegen-units = 1
